Feat: implement findBy methods for lawyer attributes